	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
03/21
	* Fixed RSX 0806 and General Ygnizem card [Playtester]
03/20
	* Corrected itemskill calls in the item_db,
	* Made the weapon enchanting items invoke the ITEM_ENCHANTARMS skill
	* Corrected Holy Egg not being type 11 (delay consume)
	* Corrected typo in bonus bSubRace2 (it was called bSPSubRace2 for some
	  reason) [Skotlex]
	* Updated new cards [Playtester]
	- they can all be used now, however some bonuses are still incomplete
	- also fixed Byeollungum, The Sign and Turtle General Card
03/17
	* Removed .gat from configs [Lupus]
03/15
	* Increased Shield Chain's range by one. It is now a ranged skill.
	  [Skotlex]
03/12
	* Updated the "AddEffWhenHit" cards [Playtester]
	- chances got lowered according to Aegis, Freya, cRO and euRO
	- Lion Mask has 5% chance of silence instead of 3%
03/11
	* Fixed some autocast rates of the new headgears [Playtester]
03/09
	* Updated various one-handed weapons [Playtester]
03/08
	* Added new map_cache.dat containing every map you need at the moment [DracoRPG]
	  - Beware as it was built by a little-endian (i386), for a little-endian!
	  - It will be updated by devs when new maps will be added to eA
03/07
	* Updated skills that shouldn't ignore the target's cards: Smoking, Fling,
	  Zenynage. [Skotlex]
03/06
	* Fixed Flying Angel headgear [Playtester]
	* Corrected the NK values of skills (0x08 -> 0x80): Self Destruction,
	  Smoking, Pressure, Fling, Zeny Nage, BioExplosion
	* Soul Burn & Gravitation got NK 0x80 (previously hardcoded) [Skotlex]
	* Added various new headgears thanks to Argatlahm [Playtester]